--- a/.github/workflows/black-formatter.yml
+++ b/.github/workflows/black-formatter.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
+  formatter:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,7 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f setup/requirements.txt ]; then pip install -r setup/requirements.txt; fi
-      - name: Run linter
+      - name: Run formatter
         run: |
           black . --check --diff --color
 
