--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -6,17 +6,24 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Setup Python 3.11
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.11
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f setup/requirements-dev.txt ]; then pip install -r setup/requirements-dev.txt; fi
+      - name: Install 1Password CLI
+        uses: simonbs/install-op-cli@2.23.0
+        with:
+          version-number: 2.13.1
+          skip-if-installed: true
+      - name: Verify 1Password was Installed
+        run: op --version
       - name: Run pytest
         run: |
           python -m pytest tests/unit
