--- a/.github/workflows/black-formatter.yml
+++ b/.github/workflows/black-formatter.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f setup/requirements.txt ]; then pip install -r setup/requirements.txt; fi
+          if [ -f setup/github-actions.txt ]; then 
+            pip install -r setup/github-actions.txt; fi
       - name: Run formatter
         run: |
           black . --check --diff --color
